GROOVY-2492: Allow Map.eachWithIndex to be called with a three-arg closure (oops, meant to target Java 4 still to allow this to be candidate for 1.5.2)
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@10335 a5544e8c-8a19-0410-ba12-f9af4593a198